Fixes alignment of presence links.

--- a/src/styles/partials/_about.scss
+++ b/src/styles/partials/_about.scss
@@ -11,6 +11,7 @@
     }
 
     a {
+      margin-top: .3em;
       float: right;
     }
   }
